[gd_scene load_steps=23 format=3 uid="uid://c16sdr46mdk2x"]

[ext_resource type="Script" path="res://lib/main_menu.gd" id="1_e3vxj"]
[ext_resource type="Script" path="res://lib/anim_player_menu.gd" id="2_57fhl"]
[ext_resource type="PackedScene" uid="uid://pjr0kno8invs" path="res://assets/Cubes/tscn/cube_grass_single_2.tscn" id="3_4010w"]
[ext_resource type="PackedScene" uid="uid://dp0u6j8bek60k" path="res://assets/Nature/tscn/grass_1.tscn" id="4_8qhea"]
[ext_resource type="PackedScene" uid="uid://ddnxbo34ro2jl" path="res://assets/Nature/tscn/rock_1.tscn" id="5_elt8p"]
[ext_resource type="PackedScene" uid="uid://fxwxnq61kwvr" path="res://assets/Nature/tscn/tree_fruit_2.tscn" id="6_88ep6"]
[ext_resource type="PackedScene" uid="uid://bg1q3ump5jtpx" path="res://assets/Nature/tscn/bush.tscn" id="7_ifsi6"]
[ext_resource type="PackedScene" uid="uid://cbm8yugsyrjod" path="res://assets/Nature/tscn/bush_fruit.tscn" id="8_67cbr"]
[ext_resource type="PackedScene" uid="uid://c47wgji18gjtj" path="res://assets/Nature/tscn/tree.tscn" id="9_2ech7"]
[ext_resource type="PackedScene" uid="uid://b2jm0abduph2p" path="res://assets/Nature/tscn/fruit.tscn" id="10_6pblj"]
[ext_resource type="PackedScene" uid="uid://dwyjjw6yll0ke" path="res://assets/Nature/tscn/cloud_1.tscn" id="11_axoii"]
[ext_resource type="PackedScene" uid="uid://de58a1xlguob2" path="res://assets/Nature/tscn/cloud_2.tscn" id="12_rg4pr"]
[ext_resource type="PackedScene" uid="uid://dlu4bwbnsgvsa" path="res://assets/Nature/tscn/cloud_3.tscn" id="13_emf3x"]
[ext_resource type="PackedScene" uid="uid://ddef6ra1ayndt" path="res://models/character/player/character.tscn" id="14_y2pl4"]
[ext_resource type="Animation" uid="uid://cwy3txydoqagc" path="res://assets/animation/player/Hello.res" id="15_663qg"]
[ext_resource type="PackedScene" uid="uid://bb55xth2gb0ec" path="res://ui/main_menu.tscn" id="16_gokql"]
[ext_resource type="Texture2D" uid="uid://dhuej3enddfkb" path="res://assets/texture/kloofendal_48d_partly_cloudy_puresky_4k.exr" id="16_x12wd"]
[ext_resource type="AudioStream" uid="uid://2aooortqy0c4" path="res://assets/musics/menu/＂8 Bit Space Groove!＂ Chill Pretty Chiptune Game Music by HeatleyBros.wav" id="17_wdtux"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xppxe"]
_data = {
"hello": ExtResource("15_663qg")
}

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_bbry7"]
panorama = ExtResource("16_x12wd")

[sub_resource type="Sky" id="Sky_3wnbx"]
sky_material = SubResource("PanoramaSkyMaterial_bbry7")

[sub_resource type="Environment" id="Environment_mpqhe"]
background_mode = 2
background_energy_multiplier = 0.4
sky = SubResource("Sky_3wnbx")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource("1_e3vxj")

[node name="Scene" type="Node3D" parent="."]
script = ExtResource("2_57fhl")

[node name="Cube_Grass_Single10" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, -2)

[node name="Cube_Grass_Single2" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Scene"]
transform = Transform3D(-0.840412, -0.540908, 0.033551, 0.383601, -0.549988, 0.741865, -0.382828, 0.636343, 0.669709, 0, 0, 0)
light_color = Color(0.760784, 0.494118, 0.301961, 1)
shadow_enabled = true
directional_shadow_mode = 0

[node name="Grass_12" parent="Scene" instance=ExtResource("4_8qhea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, -1)

[node name="Rock_12" parent="Scene" instance=ExtResource("5_elt8p")]
transform = Transform3D(1, 0, 0, 0, 0.999848, 0.0174524, 0, -0.0174524, 0.999848, -2, -5.96046e-08, -2)

[node name="Tree_Fruit2" parent="Scene" instance=ExtResource("6_88ep6")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, -2)

[node name="Bush2" parent="Scene" instance=ExtResource("7_ifsi6")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 1, 0, -2)

[node name="Bush_Fruit2" parent="Scene" instance=ExtResource("8_67cbr")]
transform = Transform3D(0.299762, 0, 0.0119506, 0, 0.3, 0, -0.0119506, 0, 0.299762, -0.623948, 1.19209e-07, -0.188202)

[node name="Tree2" parent="Scene" instance=ExtResource("9_2ech7")]
transform = Transform3D(0.195, 0, 0, 0, 0.195, 0, 0, 0, 0.195, -2.18157, 0, -0.881032)

[node name="Fruit2" parent="Scene" instance=ExtResource("10_6pblj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08322, 0, -0.416573)

[node name="Cloud_12" parent="Scene" instance=ExtResource("11_axoii")]
transform = Transform3D(0.39, 0, 0, 0, 0.378638, -0.093451, 0, 0.093451, 0.378638, 2.36824, 3.12046, -2.15325)

[node name="Cloud_22" parent="Scene" instance=ExtResource("12_rg4pr")]
transform = Transform3D(0.545, 0, 0, 0, 0.523126, -0.152854, 0, 0.152854, 0.523126, -0.932125, 2.83664, -1.28388)

[node name="Cloud_32" parent="Scene" instance=ExtResource("13_emf3x")]
transform = Transform3D(0.33, 0, 0, 0, 0.322755, -0.0687686, 0, 0.0687686, 0.322755, -2.99895, 1.36413, -6.47602)

[node name="Cube_Grass_Single3" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, 0)

[node name="Cube_Grass_Single4" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0)

[node name="Cube_Grass_Single5" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, 0)

[node name="Grass_13" parent="Scene" instance=ExtResource("4_8qhea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, -2)

[node name="Rock_13" parent="Scene" instance=ExtResource("5_elt8p")]
transform = Transform3D(0.3, 0, 0, 0, 0.299954, 0.00523572, 0, -0.00523572, 0.299954, 2, -5.96046e-08, -2)

[node name="Rock_14" parent="Scene" instance=ExtResource("5_elt8p")]
transform = Transform3D(1, 0, 0, 0, 0.999391, 0.0348995, 0, -0.0348995, 0.999391, 0.4029, -0.0349049, -3.9997)

[node name="Tree_Fruit3" parent="Scene" instance=ExtResource("6_88ep6")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 3, 0, -1.6)

[node name="Cube_Grass_Single6" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, -2)

[node name="Cube_Grass_Single12" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, -4)

[node name="Cube_Grass_Single14" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, -6)

[node name="Cube_Grass_Single13" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, -6)

[node name="Cube_Grass_Single11" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, -4)

[node name="Cube_Grass_Single7" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, -2)

[node name="Grass_14" parent="Scene" instance=ExtResource("4_8qhea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, 0)

[node name="Rock_15" parent="Scene" instance=ExtResource("5_elt8p")]
transform = Transform3D(0.3, 0, 0, 0, 0.299817, 0.0104699, 0, -0.0104699, 0.299817, 3.43805, -0.0349049, -3.9997)

[node name="Cube_Grass_Single8" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, -2)

[node name="Cube_Grass_Single15" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, -4)

[node name="Cube_Grass_Single17" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, -6)

[node name="Cube_Grass_Single16" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, -6)

[node name="Cube_Grass_Single9" parent="Scene" instance=ExtResource("3_4010w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, -4)

[node name="Bush3" parent="Scene" instance=ExtResource("7_ifsi6")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 2.48797, 0, -3.87586)

[node name="Tree_Fruit4" parent="Scene" instance=ExtResource("6_88ep6")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 2.52746, -0.0214345, -3.68843)

[node name="Character" parent="Scene" instance=ExtResource("14_y2pl4")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 1, 0, 0)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Scene/Character"]
libraries = {
"hello": SubResource("AnimationLibrary_xppxe")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="Scene"]
environment = SubResource("Environment_mpqhe")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.980426, 0.196887, 0, -0.196887, 0.980426, 0.287073, 0.965051, 1.57439)
fov = 60.0

[node name="Menu" parent="." instance=ExtResource("16_gokql")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("17_wdtux")
attenuation_model = 3
autoplay = true

[connection signal="button_new_pressed" from="Menu" to="." method="_on_menu_button_new_pressed"]
[connection signal="button_quit_pressed" from="Menu" to="." method="_on_menu_button_quit_pressed"]
[connection signal="button_start_pressed" from="Menu" to="." method="_on_menu_button_start_pressed"]
